# HydroGenerate

./: .buildinfo  .gitignore  1_Introduction-Tutorial.html  1_Theory_Hydropower.html  1_UserGuide_Introduction-Tutorial.html  2_Diversion.html  2_Theory_Design_Flow.html  2_UserGuide_Diversion.html  3_FlowOptions.html  3_Theory_Efficiency.html  3_UserGuide_FlowOptions.html  4_Cost&Revenue.html  4_Theory_Head_loss.html  4_UserGuide_QueryingDataUSGS-NWIS.html  5_Hydrokinetics.html  5_UserGuide_Cost&Revenue.html  6_UserGuide_Hydrokinetics.html  7_UserGuide_HydroGenerateWorkflow.html  ANN_FFT.py  CMF.html  Convert_to_Hourly_Data.py  DeveloperGuide_1_Architecture.html  DeveloperGuide_2_MethodsFunctions.html  DeveloperGuide_3_Contributing.html  DeveloperGuide_4_Testing.html  Energy_Task_Plot.py  FEC_RTDS.py  FFT_freq_prediction.py  FFT_least_square_fit.py  FFT_new.py  FFT_tidal.py  FFT_tidal_prediction.py  GettingStarted_1_Installation.html  GettingStarted_2_QuickStart.html  HydroGenerate_Introduction.html  IFP_plots.py  Inputs.html  JOSS_v1.html  LICENSE  MLR.py  (+76 more)
.doctrees/: DeveloperGuide_4_Testing.doctree  Theory_3_Efficiency.doctree  UserGuide_7_HydroGenerateWorkflow.doctree
.github/: test_main.yml
HydroGenerate/: flow_preprocessing.py  hydraulic_processing.py  hydropower_potential.py  summary_results.py  turbine_calculation.py
HydroGenerate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_sources/: 1_Introduction-Tutorial.ipynb  1_Theory_Hydropower.md  2_Theory_Design_Flow.md  3_Theory_Efficiency.md  4_Theory_Head_loss.md  7_UserGuide_HydroGenerateWorkflow.md  CMF.md  (+29 more)
(+321 files in other folders)
